@@ -1,3 +1,14 @@
+AM 07/06/09
+- Solved a bug identified by Mark: constant expressions
+  were not allowed on RangeSimulator ranges, although they
+  were explicitly mentioned in the documentation. The doc
+  has been improved as well, saying that variables are not
+  allowed inside ranges.
+- Changed constants in peersim.rangesime.TaggedOutputStream
+  from protected to public; this is needed to use the same
+  class in other simulator implementation. Added the @config
+  specification, so they appear correctly in the documentation.
+
 AM 31/05/09
 - Solved a bug in peersim.edsim.EDSimulator
   ClassCastException generated inside a user Control object
